8144935: C2: safepoint is pruned from a non-counted loop

Reviewed-by: roland